2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade: Uses "about" icon
    rather than "information" for the button next to the source combobox.

2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: When editing an existing
    dictionary, "search selected databases" was selected although there weren't
    selected databases.

2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: Remember config widget.

2007-10-06 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade: About source plugin
    button. Hopefully this should encourage more developers to write source
    plugins :).
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Code to show the about dialog.
    * lib/fantasdic/sources/dict_server.rb: Updates plugin metadata.
    * lib/fantasdic/source_base.rb: More possible metadata.
    * lib/fantasdic/ui/preferences_dialog.rb: Makes dialog modal.
    
    * lib/fantasdic/ui/about_dialog.rb: Removes unused variable, adds a useful
    comment.

2007-10-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dict_server.rb:
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Crashed when server was not
    reachable (exception not properly caught).

2007-10-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/net/dict.rb: Cache methods moved to source_base.rb. This
    way, any source plugin can benefit from the cache system.

    * lib/fantasdic/sources/dict_server.rb:
    * lib/fantasdic/source_base.rb: Better separation of UI and non UI.
    Implements define and match methods.

    * lib/fantasdic/ui/add_dictionary_dialog.rb: Follow above changes.
    
    * lib/fantasdic/ui/main_app.rb: Multiple backends support. Overall it seems
    to work fine but it needs further testing.

2007-10-03 Mathieu Blondel <mblondel@svn.gnome.org>
